--- a/src/css/shoppingcart.css
+++ b/src/css/shoppingcart.css
@@ -35,11 +35,6 @@
   transform: translateX(0);
 }
 
-body.no-scroll {
-  overflow: hidden !important;
-  height: 100%;
-}
-
 .cart-sidebar-header {
   display: flex;
   justify-content: space-between;
@@ -85,7 +80,7 @@ body.no-scroll {
 .cart-item-info {
   display: flex;
   gap: 2rem;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   padding: 1rem;
 }
@@ -108,4 +103,19 @@ body.no-scroll {
 .btw-text {
   font-size: var(--font-size-sm);
   color: var(--text-secondary);
+}
+
+.remove-item {
+  font-size: var(--font-size-sm);
+  color: var(--text-secondary);
+  cursor: pointer;
+  text-decoration: underline;
+  background-color: transparent;
+  border: none;
+  margin-left: auto;
+  transition: color 0.3s ease;
+
+  &:hover {
+    color: var(--color-error);
+  }
 }
