--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,7 @@
 @import url("./newproducts.css");
 @import url("./shoppingcart.css");
 @import url("./cartmodal.css");
+@import url("./toastpop.css");
 @import url("./footer.css");
 
 html {
