--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -104,6 +104,7 @@
   font-size: var(--font-size-md);
   transition: background-color 0.3s ease;
   border: none;
+  text-align: center;
 
   &:hover {
     background-color: var(--btn-primary-hover);
