Fixed: header sticky animation

--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -17,6 +17,10 @@
   text-decoration: none;
 }
 
+.header--hidden {
+  transform: translateY(-100%);
+}
+
 .header__logo_text {
   font-size: var(--font-size-xxl);
   font-family: var(--font-extra);
