added filters and landing page for products

--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -79,7 +79,7 @@
 .btn--view-page,
 .btn--shoppingcart {
   background-color: var(--bg-dark);
-  color: var(--btn-primary-text);
+  color: var(--text-inverted);
   border-radius: var(--border-radius-md);
   padding: var(--spacing-sm) var(--spacing-md);
   font-size: var(--font-size-sm);
@@ -90,7 +90,6 @@
 
   &:hover {
     background-color: var(--btn-primary-bg);
-    color: var(--btn-primary-text);
   }
 }
 
@@ -182,4 +181,41 @@
   cursor: pointer;
 
   outline: none;
+}
+
+.btn--view {
+  background-color: transparent;
+  color: var(--text-inverted);
+  border: 3px solid white;
+  border-radius: var(--border-radius-md);
+  padding: var(--spacing-sm) var(--spacing-lg);
+  font-size: var(--font-size-sm);
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  &:hover {
+    color: black;
+    background-color: white;
+  }
+}
+
+.btn--add-to-cart--banner {
+  background-color: var(--btn-secondary-bg);
+  color: var(--text-primary);
+  padding: var(--spacing-md) var(--spacing-lg);
+  font-size: var(--font-size-sm);
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  border: none;
+  display: flex;
+  align-items: center;
+
+  &:hover {
+    background-color: var(--btn-primary-hover);
+    color: var(--btn-secondary-bg);
+  }
 }
