--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,14 +1,17 @@
 @import url("./variables.css");
 @import url("./navigation.css");
 @import url("./hero.css");
+@import url("./titles.css");
 @import url("./buttons.css");
 @import url("./animations/button-animation.css");
 @import url("./animations/text-animation.css");
 @import url("./featured.css");
+@import url("./banner.css");
 @import url("./newproducts.css");
 @import url("./shoppingcart.css");
 @import url("./cartmodal.css");
 @import url("./toastpop.css");
+@import url("./products_landing.css");
 @import url("./footer.css");
 
 html {
